--- a/Duplication_of_simulations.ipynb
+++ b/Duplication_of_simulations.ipynb
@@ -2,7 +2,47 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "N=2500\n",
+        "df =4\n",
+        "def data_generator(n, df):\n",
+        "    data = np.abs(np.random.standard_t(df, size=n))\n",
+        "    return (data - np.mean(data)) / np.std(data)\n",
+        "\n",
+        "term1 =\n",
+        "term2 = 2 np.sqrt(df / np.pi)\n",
+        "term3 = gamma((nu + 1) / 2) / (gamma(nu / 2) * (nu - 1))\n",
+        "\n",
+        "\n",
+        "\n",
+        "data = data_generator(N, df)\n",
+        "v = np.std(data)*np.std(data)\n",
+        "print(v)\n"
+      ],
+      "metadata": {
+        "id": "3PMTK_fG_GQS",
+        "outputId": "fffa9d0c-f522-44a7-d189-73841c1fe780",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "3PMTK_fG_GQS",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "id": "4a6d9eb1",
       "metadata": {
         "id": "4a6d9eb1"
@@ -134,18 +174,18 @@
         "    plt.tight_layout()\n",
         "    plt.show()\n",
         "\n",
-        "def plot_mu_MOM_hist(mu_MOM_print, O_values, k_values, simulations, bins):\n",
+        "def plot_mu_mu_hat_N_1_hist(mu_mu_hat_N_1_print, O_values, k_values, simulations, bins):\n",
         "    num_k = len(k_values)\n",
         "    rows = (num_k + 3) // 4\n",
         "    fig, axes = plt.subplots(rows, 4, figsize=(16, 4 * rows))\n",
         "    axes = axes.flatten()\n",
         "    index = 0\n",
         "    for i, k in enumerate(k_values):\n",
-        "        subset = mu_MOM_print[index : index + simulations]\n",
+        "        subset = mu_mu_hat_N_1_print[index : index + simulations]\n",
         "        if len(subset) == 0:\n",
         "            break\n",
         "        axes[i].hist(subset, bins=bins, color=\"blue\", alpha=0.7, edgecolor=\"black\")\n",
-        "        axes[i].set_xlabel(\"mu_MOM values\")\n",
+        "        axes[i].set_xlabel(\"mu_mu_hat_N_1 values\")\n",
         "        axes[i].set_ylabel(\"Frequency\")\n",
         "        axes[i].set_title(f\"Histogram for k={k}\")\n",
         "        axes[i].grid(axis=\"y\", linestyle=\"--\", alpha=0.7)\n",
@@ -182,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 9,
       "id": "41ca50af",
       "metadata": {
         "id": "41ca50af"
@@ -225,7 +265,7 @@
         "outputId": "a5fed368-1e19-4585-b45d-aab04ebf71af"
       },
       "id": "g_h6wwkRPxdW",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +304,7 @@
         "outputId": "daed132b-f856-48a6-8b2c-3703bab17785"
       },
       "id": "ArUceyJOPxiD",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -417,7 +457,7 @@
         }
       },
       "id": "w1uZ_II0bexD",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -446,7 +486,7 @@
         "outputId": "47c4d9d9-952a-47b6-eb76-884bd777ad41"
       },
       "id": "gdbGRE7eJqAQ",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -474,7 +514,7 @@
         "outputId": "cce2536a-28a7-4530-f303-98e3e36440b2"
       },
       "id": "1ptNv-j6LE5G",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -490,7 +530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "bcb27590",
       "metadata": {
         "id": "bcb27590"
